Commit with ellipse and numbers

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             </div>
             <div class="right_part">
                 <div class="basket right_part_text"><a href="page_two.html"><img src="Vector.svg" alt="Basket"/></a></div>
-                <div><img class="ellipse" src="Ellipse%201.svg"/>
-                    <!--<div class="count"></div>      где-то здесь должна быть цифра-->
+                <div class="ellipse">
+                    <div class="count"></div>      <!--здесь должна быть цифра-->
                 </div>
                 <a class="registration right_part_text" href="page_two.html" >Зарегистрироваться</a>
                 <a class="about right_part_text" href="page_two.html">О нас</a>
