--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="right_part">
                 <div class="basket right_part_text"><a href="page_two.html"><img src="Vector.svg" alt="Basket"/></a></div>
                 <div class="ellipse">
-                    <div class="count"></div>      <!--здесь должна быть цифра-->
+                    <div id="counter-value" class="count"></div>      <!--здесь должна быть цифра-->
                 </div>
                 <a class="registration right_part_text" href="page_two.html" >Зарегистрироваться</a>
                 <a class="about right_part_text" href="page_two.html">О нас</a>
