--- a/index.html
+++ b/index.html
@@ -7,45 +7,45 @@
 </head>
 <body>
     <header class="header">
-        <div class="left_part">
-            <div><a href="page_two.html"><img src="Combined-Shape.svg" alt="company logo"/></a></div>
-            <div class="left_part_text"><a href="page_two.html">Магазин</a></div>
-        </div>
-        <div class="right_part">
-            <a class="right_part_text" href="page_two.html" >Зарегистрироваться</a>
-            <a class="right_part_text" href="page_two.html">О нас</a>
-            <a class="right_part_text" href="page_two.html" >Помощь</a>
-            <div class="basket"><a href="page_two.html">
-                <img src="Vector.svg" alt="Basket"/></a>
-                <div class="ellipse basket">
-                    <div id="counter-value" class="count"></div>
-                </div>
-            </div>     
-        </div>
-    </header>
-        <div class="line">
-            <div class="inLine">
-                <a href="page_two.html"><span class="lineText">В течение всего месяца скидка на все товары 50%</span></a> 
-                <a href="page_two.html"><span class="lineText">Начать покупки</span></a>
+        <div class="parts">
+            <div class="left_part">
+                <div><a href="page_two.html"><img src="Combined-Shape.svg" alt="company logo"/></a></div>
+                <div class="left_part_text"><a href="page_two.html">Магазин</a></div>
+            </div>
+            <div class="right_part">
+                <a class="right_part_text" href="page_two.html" >Помощь</a>
+                <a class="right_part_text" href="page_two.html">О нас</a>
+                <a class="right_part_text" href="page_two.html" >Зарегестрироваться</a>
             </div>
         </div>
-        <div class="goodsContainer">
-            <div class="goodsProduct">
+                <div class="basket"><a href="page_two.html">
+                    <img src="Vector.svg" alt="Basket"/></a>
+                    <div class="ellipse basket">
+                        <div id="counter-value" class="count"></div>
+                    </div>
+                </div>     
+    </header>
+        <div class="line">
+                <a href="page_two.html"><div class="line-text">В течение всего месяца скидка на все товары 50%</div></a>
+                <a href="page_two.html"><div class="line-text">Начать покупки</div></a>
+        </div>
+        <div class="goods-container">
+            <div class="goods-product">
                 <img class="pic" src="book1.png"/>
                 <div class="goods__text">Гарри Поттер и философский камень</div>
                 <button class="goods__button visibility" onclick="onClick()">В корзину</button>
             </div>
-            <div class="goodsProduct">
+            <div class="goods-product">
                 <img class="pic" src="book2.png"/>
                 <div class="goods__text">Вторая жизнь Уве</div>
                 <button class="goods__button visibility" onclick="onClick()">В корзину</button>
             </div>
-            <div class="goodsProduct">
+            <div class="goods-product">
                 <img class="pic" src="book3.png"/>
                 <div class="goods__text">Цветы для Элджернона</div>
                 <button class="goods__button visibility" onclick="onClick()">В корзину</button>
             </div>
-            <div class="goodsProduct">
+            <div class="goods-product">
                 <img class="pic" src="book4.png"/>
                 <div class="goods__text">Гордость и предубеждение</div>
                 <button class="goods__button visibility" onclick="onClick()">В корзину</button>
